# rust-payload-offloading-for-aws

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/: dependabot.yml  mergify.yml
.github/workflows/: build-verify.yml  ci.yml  pr-verify.yml  release-plz.yml
src/: lib.rs
src/offload/: error.rs  id_provider.rs  mod.rs  offloading.rs  sns.rs  sqs.rs  test.rs
tests/: sqs.rs
tests/common/: mod.rs
tests/localstack/: mod.rs
