[package]
name = "rust-payload-offloading-for-aws"
version = "0.1.1"
edition = "2021"
rust-version = "1.81"

[features]
default = []
sqs = ["aws-sdk-sqs"]
sns = ["aws-sdk-sns"]
it = ["sqs"]

[dependencies]
aws-config = "1.5.9"
aws-sdk-s3 = "1.58.0"
aws-sdk-sns = { version = "1.48.0", optional = true }
aws-sdk-sqs = { version = "1.47.0", optional = true }
aws-smithy-runtime-api = "1.7.2"
aws-smithy-types = "1.2.8"
base64ct = "1.7.3"
futures = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
aws-sdk-sqs = { version = "1.47.0", features = ["test-util"] }
ctor = "0.2.9"
testcontainers = { version = "0.23.1" }
testcontainers-modules = { version = "0.11.4", features = ["localstack"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
wiremock = "0.6.2"
